[tool.poetry]
name = "gwcosmo-query"
version = "0.1.0"
description = "Infrastructure to set up the GLADE+ (UpGLADE) on a database for rapid querying."
authors = ["Kendall Ackley <kendall.ackley@ligo.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
astropy = "*"
astropy_healpix = "*"
healpix_alchemy = "*"
healpy = "*"
numpy = "*"
pandas = "*"
sqlalchemy = ">=2.0"

[tool.poetry.group.dev.dependencies]
ligo-skymap = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"